[gd_scene load_steps=3 format=3 uid="uid://bg3dwlfo3pgnr"]

[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_o404d"]
[ext_resource type="PackedScene" uid="uid://cb3mo5n0m70ux" path="res://Objects/MainMenu.tscn" id="2_wnmxm"]

[node name="Game" type="Node2D"]
script = ExtResource("1_o404d")

[node name="Debug" type="Node2D" parent="."]
z_index = 3

[node name="FramerateLabel" type="Label" parent="Debug"]
offset_left = 340.0
offset_top = 672.0
offset_right = 380.0
offset_bottom = 695.0

[node name="BulletCountLabel" type="Label" parent="Debug"]
offset_left = 900.0
offset_top = 672.0
offset_right = 940.0
offset_bottom = 695.0
horizontal_alignment = 2

[node name="MemoryLabel" type="Label" parent="Debug"]
offset_top = 697.0
offset_right = 40.0
offset_bottom = 720.0

[node name="MainMenu" parent="." instance=ExtResource("2_wnmxm")]
offset_left = 640.0
offset_top = 360.0
offset_right = 640.0
offset_bottom = 360.0
